Ignore expanded files

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 _dev/
 node_modules/
 *.map
+# ignore expanded files during development
+# only *.min.* files get included for distribution
+/css/main.css
+/js/main.js
