--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,11 @@
 _dev/
 node_modules/
 *.map
+
 # ignore expanded files during development
 # only *.min.* files get included for distribution
-/css/main.css
-/js/main.js
+#/css/main.css
+#/js/main.js
 
 # Server
 # ...
