--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   },
   "homepage": "https://github.com/dsgreen/project-boilerplate#readme",
   "devDependencies": {
+    "bootstrap": "^4.1.0",
     "grunt": "^1.0.2",
     "grunt-contrib-uglify": "^3.3.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-sass": "^2.1.0"
-  }
+  },
+  "dependencies": {}
 }
