--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "grunt": "^1.0.2",
     "grunt-contrib-uglify": "^3.3.0",
     "grunt-contrib-watch": "^1.0.0",
-    "grunt-sass": "^2.1.0"
+    "grunt-sass": "^2.1.0",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.3"
   },
   "dependencies": {}
 }
