--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "grunt-contrib-watch": "^1.1.0",
     "grunt-sass": "3.1.0",
     "jquery": "^3.6.0",
-    "node-sass": "^6.0.1",
-    "popper.js": "^1.16.1"
+    "popper.js": "^1.16.1",
+    "sass": "^1.45.0"
   }
 }
